# learn-opengl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: get_boost.cmake  get_conan.cmake  get_glfw.cmake  get_gtest.cmake
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
include/gl3d/: global_init.h  window.h
include/gl3d/utils/: aligned_storage.h  singleton.h  stack_pimpl.h
lib/gl3d/: global_init.cpp  window.cpp
lib/gl3d/private/: global_init.cpp  global_init.h
src/: main.cpp
src/shaders/: triangle_shaders.hpp
tests/: CMakeLists.txt  main.cpp
